--- a/app/src/main/res/layout/activity_tshirt_detail.xml
+++ b/app/src/main/res/layout/activity_tshirt_detail.xml
@@ -2,6 +2,7 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#FFE6E6">
 
     <LinearLayout
@@ -20,7 +21,43 @@
             android:textStyle="bold"
             android:layout_marginBottom="16dp" />
 
-        <!-- RecyclerView or other content for the selected category can go here -->
+        <!-- Search Bar -->
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginBottom="12dp"
+            app:cardCornerRadius="25dp"
+            app:cardElevation="4dp">
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
+                android:gravity="center_vertical">
+
+                <EditText
+                    android:id="@+id/et_search"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:hint="Search Products"
+                    android:textSize="16sp"
+                    android:background="@android:color/white"
+                    android:paddingStart="10dp"
+                    android:layout_marginStart="8dp"
+                    android:drawableStart="@drawable/search" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+        <!-- RecyclerView untuk menampilkan produk -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view_products"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:padding="4dp" />
 
     </LinearLayout>
 
